# mercato-transfer-platform

./: .env.example  .gitignore  README.md  package.json  render.yaml  server.js
obs new tols/: CLUB_LOGO_MANAGER_README.md  CMakeLists.txt  COMPREHENSIVE-FIX-REPORT.md  FINAL-OBS-SOLUTION-SUMMARY.md  FINAL-REAL-DATA-SOLUTION.md  FINAL-SOLUTION.md  FINAL-SYSTEM-TEST.html  FIXES-SUMMARY.md  OBS-CACHE-SOLUTION-GUIDE.md  OBS-CEF-UNIVERSAL-SOLUTION-GUIDE.md  QUICK-FIX-GUIDE.md  README-ENGLISH.md  README-QUICK-START.md  REAL-DATA-ONLY-GUIDE.md  REAL-DATA-SYSTEM.md  TEST-ENGLISH.bat  TEST-SYSTEM.bat  TRANSFERMARKT_ENHANCED_README.md  TRANSFERMARKT_TOOLS_README.md  TROUBLESHOOTING-GUIDE.md  ULTIMATE-OBS-SOLUTION-GUIDE.md  ULTIMATE-SOLUTION-SUMMARY.md  ULTIMATE-START-ENGLISH.bat  ULTIMATE-START-NEW.bat  ULTIMATE-START.bat  ULTIMATE_SYSTEM_README.md  advanced-obs-diagnostics.html  all-tools-temp.html  crash-test-tool.html  final-obs-test.html  instant-logo-fix.html  logo-debug-tool.html  logo-sync-helper.js  obs-cache-fix.js  obs-cef-universal-fix.js  package-lock.json  package.json  quick-fix-system.js  quick-fix.html  real-data-only-system.js  (+31 more)
public/: FINAL-FIXES-REPORT.md  GUIDE-FINAL.md  GUIDE-ULTIMATE.md  GUIDE-V3.md  MANCHESTER-LOGOS-FIX-REPORT.md  SIMPLE-SYSTEM-REPORT.md  SUPPORT-BAR-GUIDE.md  TRANSFERMARKT-2025-COMPREHENSIVE-REPORT.md  TRANSFERMARKT-2025-HOMEPAGE-UPDATE.md  TRANSFERMARKT-COMPREHENSIVE-FIXES-REPORT.md  TRANSFERMARKT-COMPREHENSIVE-SOLUTION-REPORT.md  TRANSFERMARKT-DISPLAY-REVOLUTION-REPORT.md  TRANSFERMARKT-ENHANCEMENT-REPORT.md  TRANSFERMARKT-FIXED-GUIDE.md  (+75 more)
(+3 files in other folders)
